--- a/Web Interface for Water Quality Monitoring/index.html
+++ b/Web Interface for Water Quality Monitoring/index.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <meta charset="UTF-8">
 
-<title>Water Quality</title>
+<head>
+
+  <title>Water Quality</title>
 
 
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -83,7 +85,24 @@ body{
 
 </style>
 
-<script src=""></script>
+<script src="OpenLayers.js"></script>
+
+<script>
+  function init() {
+          map = new OpenLayers.Map("basicMap");
+          var mapnik         = new OpenLayers.Layer.OSM();
+          var fromProjection = new OpenLayers.Projection("EPSG:4326");   // Transform from WGS 1984
+          var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
+          var position       = new OpenLayers.LonLat(13.41,52.52).transform( fromProjection, toProjection);
+          var zoom           = 15; 
+
+          map.addLayer(mapnik);
+          map.setCenter(position, zoom );
+</script>
+
+
+</head>
+
 <!-- <head>
   <link rel="stylesheet" type="text/css" href="main.css" />
 </head> -->
@@ -121,13 +140,19 @@ body{
     </div>
   </div>
 
-  
+  <!-- <footer id="footer">
+    <div class="footer-content">
+      <h3 class="footer-content h3">Team Members</h3>
+      <ul>
+        <li><a href="mailto:Sharmin_Sultana@student.uml.edu">Sharmin Sultana</a></li>
+        <li><a href="mailto:atqiyamunawara_mahi@student.uml.edu">Atqiya Munawara Mahi</a></li>
+        <li><a href="mailto:mdmahmudur_rahman@student.uml.edu">Md Mahmudur Rahman</a></li>
+     </ul>
+    </div>
+  </footer> -->
 
   </div>
 </div>
    
-
-
-
 </body>
 </html>
