--- a/Web Interface for Water Quality Monitoring/index.html
+++ b/Web Interface for Water Quality Monitoring/index.html
@@ -1,111 +1,91 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 
+
+
 <html lang="en">
+
+
+
 <meta charset="UTF-8">
 
 <head>
 
+
   <title>Water Quality</title>
 
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style> 
 
-<style>
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.page-container {
-  position: relative;
-  min-height: 100vh;
-}
-
-.content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
-}
-
-body{
-  background: rgba(255, 222, 173, 0.721);
-  font-family: sans-serif;
-}
-
-
-.rectangle {
-  height: 50px;
-  width: 100px;
-  background-color: wheat;
-}
-
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footer{
+  .page-container {
     position: relative;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #111;
-    height: 8rem;
-    width: 100vw;
-    padding-top: 0px;
-    padding-bottom: 2.5rem;
-    color: #fff;
-}
+    min-height: 100vh;
+  }
 
-.footer-content h3{
-    font-size: 2.1rem;
-    font-weight: 500;
-    text-transform: capitalize;
-    line-height: 1rem;
-}
+  .content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
 
-.footer-content p{
-    max-width: 500px;
-    /* margin: 10px auto; */
-    line-height: 28px;
-    font-size: 14px;
-    color: #cacdd2;
-}
+  body{
+    background: rgba(255, 222, 173, 0.721);
+    font-family: sans-serif;
+  }
 
-.map {
-  width: 300px;
-  height: 200px;  
-  padding: 50px;
-  border: 3px solid black;
-}
 
-</style>
+  .rectangle {
+    height: 50px;
+    width: 100px;
+    background-color: wheat;
+  }
 
-<script src="OpenLayers.js"></script>
+  .footer-content{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+  }
 
-<script>
-  function init() {
-          map = new OpenLayers.Map("basicMap");
-          var mapnik         = new OpenLayers.Layer.OSM();
-          var fromProjection = new OpenLayers.Projection("EPSG:4326");   // Transform from WGS 1984
-          var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
-          var position       = new OpenLayers.LonLat(13.41,52.52).transform( fromProjection, toProjection);
-          var zoom           = 15; 
+  .footer{
+      position: relative;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: #111;
+      height: 8rem;
+      width: 100vw;
+      padding-top: 0px;
+      padding-bottom: 2.5rem;
+      color: #fff;
+  }
 
-          map.addLayer(mapnik);
-          map.setCenter(position, zoom );
-</script>
+  .footer-content h3{
+      font-size: 2.1rem;
+      font-weight: 500;
+      text-transform: capitalize;
+      line-height: 1rem;
+  }
+
+  .footer-content p{
+      max-width: 500px;
+      /* margin: 10px auto; */
+      line-height: 28px;
+      font-size: 14px;
+      color: #cacdd2;
+  }
+
+
+  </style>
 
 
 </head>
-
-<!-- <head>
-  <link rel="stylesheet" type="text/css" href="main.css" />
-</head> -->
 
 <body>
 
@@ -121,6 +101,7 @@ body{
     <input type="text" id="Zip Code" name="Zip Code" placeholder="Enter your zip code"><br>
     <button type="button" onclick="location.SharminAnu/SharminAnu.github.io/map.html">Click Me!</button>
     <div class="map">The Map Will Be Here.........</div>
+    <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="first_basic_map" src="https://arcgis.com/apps/Embed/index.html?webmap=b9082e2407e845a39346af898292d0d0&extent=-71.3671,42.624,-71.2445,42.6625&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe></div>
   </center>
 
   <center>
@@ -154,5 +135,8 @@ body{
   </div>
 </div>
    
+
+
+<script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </body>
 </html>
